[metadata]
name = eventhive
version = attr: eventhive.__meta__.__version__
author = attr: eventhive.__meta__.__author__
author_email = eventhive.__meta__.__email__
url = https://github.com/operatorequals/eventhive
description = Network PubSub and Async Message Passing for Humans
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pubsub, microservice, iot
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3


[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires = file: requirements.txt


[options.extras_require]
redis = redis >= 4.5.1
dev = 
    black==22.1.0
    flake8==4.0.1
    docker==6.0.1


[options.entry_points]
console_scripts = 
    eventhive-cli = eventhive.cli:main

